--- a/Parent/Parent/Localizable.xcstrings
+++ b/Parent/Parent/Localizable.xcstrings
@@ -21147,7 +21147,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "提出 & ルブリック"
+            "value" : "課題提出とルーブリック"
           }
         },
         "mi" : {
