--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -104710,7 +104710,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "ルービック"
+            "value" : "ルーブリック"
           }
         },
         "mi" : {
@@ -113612,7 +113612,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "提出 & ルブリック"
+            "value" : "課題提出とルーブリック"
           }
         },
         "mi" : {
