--- a/Horizon/Horizon/Resources/Localizable.xcstrings
+++ b/Horizon/Horizon/Resources/Localizable.xcstrings
@@ -14288,7 +14288,7 @@
         "is" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Vægi verkefnahópa"
+            "value" : "Vægi verkefnaflokka"
           }
         },
         "it" : {
