Add skeleton architecture.

--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -36460,6 +36460,15 @@
         }
       }
     },
+    "Content for widget 1" : {
+
+    },
+    "Content for widget 2" : {
+
+    },
+    "Content for widget 3" : {
+
+    },
     "Continue" : {
       "comment" : "Button title for selecting to continue on to quiz. The will appear in the alert view notfifying the user of mobile quiz limitations.",
       "extractionState" : "manual",
@@ -57680,6 +57689,9 @@
           }
         }
       }
+    },
+    "Full Width Widget" : {
+
     },
     "Future" : {
       "extractionState" : "manual",
@@ -130174,6 +130186,9 @@
         }
       }
     },
+    "This is a full width widget" : {
+
+    },
     "This is a media message." : {
       "extractionState" : "manual",
       "localizations" : {
@@ -143528,6 +143543,15 @@
           }
         }
       }
+    },
+    "Widget 1" : {
+
+    },
+    "Widget 2" : {
+
+    },
+    "Widget 3" : {
+
     },
     "Will unlock %@." : {
       "comment" : "unlock date for discussion/announcement",
