Animation fixes. Renaming.

--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -89129,6 +89129,9 @@
         }
       }
     },
+    "Oops, Something went wrong" : {
+
+    },
     "Oops!" : {
       "comment" : "Error message title\n   Error title\n   Masquerade error title",
       "extractionState" : "manual",
@@ -100674,6 +100677,9 @@
           }
         }
       }
+    },
+    "Refresh" : {
+
     },
     "Refresh Button" : {
       "extractionState" : "manual",
@@ -142749,6 +142755,9 @@
           }
         }
       }
+    },
+    "We weren't able to load this content.\nTry again, or come back later." : {
+
     },
     "Website Address" : {
       "localizations" : {
