--- a/Parent/Parent/Localizable.xcstrings
+++ b/Parent/Parent/Localizable.xcstrings
@@ -4622,7 +4622,7 @@
         "ca" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Contret"
+            "value" : "S’ha contret"
           }
         },
         "cy" : {
@@ -4790,13 +4790,13 @@
         "pl" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Schowany"
+            "value" : "Zwinięte"
           }
         },
         "pt" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Fechado"
+            "value" : "Recolhido"
           }
         },
         "pt-BR" : {
@@ -10258,7 +10258,7 @@
         "ca" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Desplegat"
+            "value" : "S’ha desplegat"
           }
         },
         "cy" : {
@@ -10390,7 +10390,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "拡大"
+            "value" : "展開"
           }
         },
         "mi" : {
